--- a/includes/styles/style.css
+++ b/includes/styles/style.css
@@ -8,3 +8,10 @@ form {
     padding: 0;
     margin: 0;
 }
+.anchor-style{
+    border: none;
+    background: none;
+    font-size: 16px;
+    font-family: Helvetica;
+}
+
