bootstrap update delete

--- a/includes/styles/style.css
+++ b/includes/styles/style.css
@@ -138,4 +138,23 @@ a {
     color: #337357;
 }
 
+.light-green{
+    color: #C2FFC7;
+}
+.green{
+    color: #9EDF9C;
+}
+.dark-green{
+    color: #62825D;
+}
+.dark2-green{
+    color: #526E48;
+}
+.red-hover:hover{
+    background-color:red;
+    color: white;
+}
+.gray-hover:hover{
+    background-color: rgb(190, 190, 190);
+}
 
