--- a/includes/styles/style.css
+++ b/includes/styles/style.css
@@ -153,7 +153,13 @@ a {
 
 .outer-box{
     background-color: #9EDF9C;
+    max-width: 70%;
 }
 .inner-box{
     background-color: white;
+}
+.image-admin-css{
+    height: 100px;
+    width: 100px;
+    object-fit: contain;
 }
