web bg gradient

--- a/includes/styles/style.css
+++ b/includes/styles/style.css
@@ -115,8 +115,12 @@ form {
     transform: scale(1.02); /* Increases size to 110% on hover */
 }
 
-body{
-    background: url('/plantshopimg.jpg') no-repeat center center;
-    background-size: cover;
+
+body {
+    background: linear-gradient(to bottom, #99ff99 0%, #3db478 94%);
+    background-size: cover; 
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
+
 
