footer style changes

--- a/includes/styles/style.css
+++ b/includes/styles/style.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     padding-top: 80px;
-    height: 100vh;
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 120px;
 }
 form {
     padding: 0;
@@ -31,10 +33,6 @@ form {
     font-family: sans-serif;
     }
 .footer {
-    position: relative;
-    z-index: 10;
-    left: 0;
-    right: 0;
     padding: 2rem;
     background: #337357;
     color: white;
@@ -43,8 +41,10 @@ form {
     justify-content: center;
     align-items: center;
     gap: 0.2rem;
-    margin-top: auto;
-    bottom: -40;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .green-hover{
