--- a/includes/styles/style.css
+++ b/includes/styles/style.css
@@ -128,7 +128,6 @@ body {
     aspect-ratio: 16/6;
     overflow: hidden;
     position: relative;
-    border: 1px solid #ccc;
 }
 
 .slides {
@@ -168,7 +167,7 @@ body {
     transform: translate(-50%, -50%);
     font-size: 2.6rem; /* Adjust size as needed */
     color: white;
-    background-color: rgba(0, 0, 0, 0.125); /* Semi-transparent background */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
     padding: 10px 20px;
     text-align: center;
     z-index: 10;
