--- a/includes/styles/style.css
+++ b/includes/styles/style.css
@@ -117,7 +117,8 @@ form {
 
 
 body {
-    background: linear-gradient(to bottom, #99ff99 0%, #3db478 94%);
+    background: rgb(31,102,47);
+    background: linear-gradient(357deg, rgba(31,102,47,1) 0%, rgba(119,238,118,1) 50%, rgba(206,217,195,1) 100%);
     background-size: cover; 
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -167,7 +168,7 @@ body {
     transform: translate(-50%, -50%);
     font-size: 2.6rem; /* Adjust size as needed */
     color: white;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     padding: 10px 20px;
     text-align: center;
     z-index: 10;
